# appmenu-gtk-module-wayland

./: .gitignore  .gitmodules  CMakeLists.txt
src/: appmenu-gtk-module.c  blacklist.c  datastructs-private.h  datastructs.c  hijack.c  platform.c  platform.h  support.c
